--- a/db.tex
+++ b/db.tex
@@ -5,6 +5,8 @@
 \author{Ваша команда по спасению компьютерной безопасности}
 \date{\today}
 
+\usepackage{hyperref}
+
 \begin{document}
 \maketitle
 \epigraph{Самый надежный в мире алгоритм \\
