--- a/part/integrity.tex
+++ b/part/integrity.tex
@@ -80,6 +80,16 @@
 данных.
 В 1992 году в стандарте языка SQL было дано описание такого системного
 каталога. Но к этому времени в различных СУБД были приняты свои принципы хранения метаданных, отказаться от которых не так-то просто. В результате в одних СУБД вообще отсутствуют стандартные подходы к хранению метаданных, в других эти подходы в значительной степени дополнены своими особенностями. \autocite{Pirogov2009}
+
+\paragraph{Типы словарей данных} ~\\
+
+Существует два типа словарей данных. Активные и пассивные, они отличаются уровнем автоматической синхронизации.
+
+\textbf{Активные словари данных.} Это словари данных, созданные в описываемых ими базах данных, которые автоматически отражают любые изменения внутри этих баз, что позволяет избежать любых несоответствий между словарями данных и описываемыми данными.
+\textbf{Словари пассивных данных.} Это словари данных, созданные как отдельные от описываемых ими баз данных сущности. Пассивные словари данных требуют дополнительной логики для синхронизации с базами данных, которые они описывают, и с ними нужно обращаться осторожно.
+Компоненты словаря данных
+Конкретное содержимое словаря данных может варьироваться. Как правило, эти компоненты представляют собой различные типы метаданных, предоставляющие информацию о данных. \autocite{DataDictionary}
+
 \paragraph{Доступ к словарю данных} ~\\
 
 По 4 правилу Кодда (Dynamic On-Line Catalog Based on the Relational Model) словарь данных должен сохраняться в форме реляционных
@@ -99,17 +109,17 @@
 
 \paragraph{Состав словаря} ~\\
 
-В состав словаря данных базы данных входят \textit{базовые таблицы} и \textit{доступные
-пользователю представления}.
-Основу словаря данных составляет совокупность базовых таблиц, хранящих
-информацию о базе данных. Эти таблицы читаются и пишутся на системном
-уровне; они редко используются непосредственно пользователями.
-Словарь данных содержит доступные пользователю представления, которые
-суммируют и отображают в удобном формате информацию из базовых таблиц словаря. Эти представления декодируют информацию базовых таблиц,
-представляя ее в полезном виде, таком как имена пользователей или таблиц,
-и используют соединения и фразы WHERE, чтобы упростить информацию.
-Большинство пользователей имеют доступ к этим представлениям вместо
-базовых таблиц словаря.
+В состав словаря данных базы данных могут входить: \autocite{DataDictionary}
+\begin{itemize}
+\item списки объектов данных (имена и определения);
+\item свойства элемента данных (такие как тип данных, уникальные идентификаторы, размер, допустимость значений NULL, индексы и параметр required);
+\item ER-диаграммы\footnote{Схема «сущность-связь» (также ERD или ER-диаграмма) — это разновидность блок-схемы, где показано, как разные «сущности» (люди, объекты, концепции и так далее) связаны между собой внутри системы.};
+\item диаграммы системного уровня;
+\item справочные данные — доступные пользователю представления, которые
+суммируют и отображают в удобном формате информацию из базовых таблиц словаря. Эти представления декодируют информацию базовых таблиц, представляя ее в полезном виде, таком как имена пользователей или таблиц, чтобы добиться человекочитаемости данных. Большинство пользователей имеют доступ к этим представлениям вместо диаграмм системного уровня;
+\item бизнес-логика (например, для проверки качества данных и объектов схемы);
+\end{itemize}
+
 Словарь данных базы данных Oracle имеет два основных применения \autocite{Kirillov2009}:
 \begin{itemize}
 \item Oracle обращается к словарю данных каждый раз, когда выдается предложение DDL;
@@ -117,14 +127,15 @@
 только читаемый справочник по базе данных.
 \end{itemize}
 
-Словарь данных всегда доступен при открытой базе данных. Он размещается
+При этом словарь данных всегда доступен при открытой базе данных. Он размещается
 в табличном пространстве SYSTEM, которое всегда находится в состоянии online,
 когда база данных открыта.
 
+В MongoDB подобными методами получения информации о БД или таблицах являются dbStats, collStatsm rolesInfo и тому подобные.\autocite{MongoDocsCommands}
+
 \paragraph{Представления словаря} ~\\
 
-Словарь данных состоит из нескольких наборов представлений. Во многих
-случаях такой набор состоит из трех представлений, содержащих аналогичную информацию и отличающихся друг от друга своими префиксами \autocite{Kirillov2009}:
+Рассматривается СУБД от вышеупомянутого Oracle. Словарь данных состоит из нескольких наборов представлений. Во многих случаях такой набор состоит из трех представлений, содержащих аналогичную информацию и отличающихся друг от друга своими префиксами \autocite{Kirillov2009}:
 \begin{itemize}
 \item USER — представление для пользователя;
 \item ALL — расширенное представление для пользователя;
@@ -173,15 +184,10 @@
 пользователя должна быть обязательно выполнена. Что будет, если при выполнении такой цепочки команд произойдет сбой? Как рассматривать тогда
 выполняемую операцию — как частично выполненную? Но как в дальнейшем система узнает, что операция была только частично выполнена, и как ее
 закончить? Все эти вопросы, в конце концов, и приводят к понятию \textbf{"транзакция"} \autocite{Pirogov2009}.
+
 \paragraph{Фиксация транзакции} ~\\
-Согласно требованиям ACID транзакция должна быть устойчивой. После своего завершения она сохраняется в системе, которую ничто не может вернуть в исходное (до начала транзакции). состояние, т. е. происходит фиксация транзакции, означающая, что ее действие постоянно даже при сбое системы. При этом подразумевается некая
-форма хранения информации в постоянной памяти как часть транзакции.
-При выполнении отдельных операций транзакции могут быть нарушены какие-либо требования целостности данных (в первую очередь имеются в виду
-корпоративные правила целостности, см. главу 2). Важно только то, что
-по окончании выполнения транзакции (фиксация транзакции) все правила
-целостности базы данных должны быть соблюдены.
-Согласно стандарту транзакция начинается с первой команды, которая обращается к данным. После этого транзакция продолжается до тех пор, пока не
-будет выполнена команда COMMIT WORK (или просто COMMIT) либо не будет закрыто соединение к базе данных. При выполнении команды COMMIT WORK происходит фиксация транзакции, другими словами, после этой команды откат транзакции уже будет невозможен \autocite{Pirogov2009}.
+Согласно требованиям ACID (atomic, consistent, isolated, durable) транзакция должна быть устойчивой. После своего завершения она сохраняется в системе, которую ничто не может вернуть в исходное (до начала транзакции) состояние, т. е. происходит фиксация транзакции, означающая, что ее действие постоянно даже при сбое системы. При выполнении отдельных операций транзакции могут быть нарушены какие-либо требования целостности данных (в первую очередь имеются в виду корпоративные правила целостности, см. главу 2). Однако по окончании выполнения транзакции (фиксация транзакции) все правила целостности базы данных будут соблюдены.
+Согласно стандарту транзакция начинается с первой команды, которая обращается к данным. После этого транзакция продолжается до тех пор, пока не будет выполнена команда COMMIT WORK (или просто COMMIT) либо не будет закрыто соединение к базе данных. При выполнении команды COMMIT WORK происходит фиксация транзакции, другими словами, после этой команды откат транзакции уже будет невозможен \autocite{Pirogov2009}.
 
 \paragraph{Прокрутки вперед и назад} ~\\
 В результате сбоя СУБД могут возникнуть две потенциальные ситуации \autocite{Karpova2009}:
@@ -209,7 +215,7 @@
 файлы БД.
 \end{enumerate}
 После выполнения этих этапов восстановления БД находится в согласованном
-состоянии и с ней можно работать. 
+состоянии и с ней можно работать.
 
 \paragraph{Контрольная точка} ~\\
 Критическим моментом в отказе системы является потеря содержимого основной
@@ -225,7 +231,7 @@
 интервалом (обычно, когда в журнале накапливается определенное число записей). Для
 создания контрольной точки требуется, во-первых, выполнить принудительное сохранение содержимого буферов оперативной памяти в физической базе данных, и, во-вторых,
 осуществить принудительное сохранение специальной записи контрольной точки в журнале на физическом носителе. Запись контрольной точки содержит список всех транзакций, выполняемых в тот момент, когда создавалась контрольная точка \autocite{Date2005}.
- 
+
 \paragraph{Откат} ~\\
 Для управления транзакциями в системах, поддерживающих механизм
 транзакций и язык SQL, используется оператор отката транзакции (отмены изменений): ROLLBACK [WORK]. Для фиксации или отката транзакции
@@ -252,7 +258,7 @@
 точки сохранения (rollback to <имя\_точки>) или зафиксировать работу от начала
 транзакции до точки сохранения (commit to <имя\_точки>). На одну транзакцию
 может быть несколько точек сохранения (ограничение на их количество зависит
-от СУБД). 
+от СУБД).
 Для сохранения сведений о транзакциях СУБД ведёт журнал
 транзакций. Журнал транзакций –- это часть БД, в которую поступают данные
 обо всех изменениях всех объектов БД. Журнал недоступен пользователям
@@ -266,7 +272,7 @@
 \item точки сохранения (явные и неявные);
 \item команды, составляющие транзакцию, и проч.
 \end{itemize}
-Начало транзакции соответствует появлению первого исполняемого SQLоператора. При этом в журнале появляется запись об этой транзакции \autocite{Karpova2009}. 
+Начало транзакции соответствует появлению первого исполняемого SQLоператора. При этом в журнале появляется запись об этой транзакции \autocite{Karpova2009}.
 
 \paragraph{Транзакции как средство изолированности пользователей} ~\\
 
@@ -280,56 +286,54 @@
 команд.
 Решение проблемы параллельной обработки базы данных заключается в том,
 что строки таблиц блокируются, а последующие транзакции, модифицирующие эти строки, отвергаются и переводятся в режим ожидания. В связи со
-свойством сохранения целостности базы данных транзакции являются подходящими единицами изолированности пользователей. Действительно, если
-каждый сеанс взаимодействия с базой данных реализуется транзакцией, то
+свойством сохранения целостности базы данных транзакции являются подходящими единицами изолированности пользователей. Действительно, если каждый сеанс взаимодействия с базой данных реализуется транзакцией, то
 пользователь начинает с того, что обращается к согласованному состоянию
-базы данных —- состоянию, в котором она могла бы находиться, даже если
+базы данных — состоянию, в котором она могла бы находиться, даже если
 бы пользователь работал с ней в одиночку.
 Если бы в СУБД не были реализованы механизмы блокирования, то при
 одновременном чтении и изменении одних и тех же данных несколькими
-пользователями могли бы возникнуть следующие проблемы одновременного доступа:
+пользователями могли бы возникнуть проблемы одновременного доступа.
+
+
+\paragraph{Конфликты транзакций и уровни изоляции} ~\\
+
+Уровни изоляции определяют степень, в которой транзакция должна быть изолирована от изменений данных, сделанных любой другой транзакцией в системе базы данных. Уровни изоляции отличаются разрешениями следующих конфликтов:
 \begin{itemize}
-\item проблема последнего изменения возникает, когда несколько пользователей изменяют одну и ту же строку, основываясь на ее начальном значении; тогда часть данных будет потеряна, т. к. каждая последующая тран-
-закция перезапишет изменения, сделанные предыдущей. Выход из этой
-ситуации заключается в последовательном внесении изменений;
-\item проблема "грязного" чтения возможна в том случае, если пользователь
-выполняет сложные операции обработки данных, требующие множественного изменения данных перед тем, как они обретут логически верное
-состояние. Если во время изменения данных другой пользователь будет
-считывать их, то может оказаться, что он получит логически неверную
-информацию. Для исключения подобных проблем необходимо производить считывание данных после окончания всех изменений;
-\item проблема неповторяемого чтения является следствием неоднократного
-считывания транзакцией одних и тех же данных. Во время выполнения
-первой транзакции другая может внести в данные изменения, поэтому при
-повторном чтении первая транзакция получит уже иной набор данных,
-что приведет к нарушению их целостности или логической несогласованности;
-\item проблема чтения фантомов появляется после того, как одна транзакция
-выбирает данные из таблицы, а другая вставляет или удаляет строки до
-завершения первой. Выбранные из таблицы значения будут некорректны.
+\item \textbf{Потерянное обновление (lost update)} — когда несколько транзакций что-то обновили в БД, но по итогам результат такой, будто отработала лишь часть транзакций. Самый опасный побочный эффект, по сути, полное отсутствие изоляции транзакций — две транзакции читают одну ячейку, записывают изменённое значение (одна вычитает стоимость мороженого, другая плату за квартиру). В итоге в ячейке значение от второй транзакции, а первой как будто и не было.
+\item \textbf{Грязное чтение (dirty read)} — ситуация, когда транзакция считывает данные, которые еще не были зафиксированы. Например, транзакция 1 обновляет строку и оставляет ее незафиксированной, в то время как транзакция 2 читает обновленную строку. Если транзакция 1 откатывает изменение, транзакция 2 будет считывать данные, которые считаются никогда не существовавшими.
+\item \textbf{Неповторяемое чтение (non-repeatable read)} — когда транзакция дважды считывает одну и ту же строку и каждый раз получает другое значение. Например, предположим, что транзакция T1 считывает данные. Из-за параллелизма другая транзакция T2 обновляет те же данные и фиксирует их. Теперь, если транзакция T1 повторно считывает те же данные, она получит другое значение.
+\item \textbf{Фантомное чтение (phantom reads)} — когда выполняются два одинаковых запроса, но извлекаемые ими строки различаются. Например, транзакция T1 извлекает набор строк, удовлетворяющих некоторым критериям поиска. Далее транзакция T2 создает несколько новых строк, соответствующих критериям поиска для транзакции T1. Если транзакция T1 повторно выполняет инструкцию, которая считывает строки, на этот раз она получает другой набор строк. Отличие от предыдущего пункта в том, что в этом случае происходит агрегация строк, а в предыдущем происходит чтение лишь одной строки.
 \end{itemize}
 
-\paragraph{Сериализация транзакций} ~\\
-
-Для того, чтобы добиться изолированности транзакций, в СУБД должны использоваться какие-либо методы регулирования совместного выполнения транзакций.
-
-План (способ) выполнения набора транзакций называется сериальным, если результат совместного выполнения транзакций эквивалентен результату некоторого последовательного выполнения этих же транзакций.
-
-Сериализация транзакций -- это механизм их выполнения по некоторому сериальному плану. Обеспечение такого механизма является основной функцией компонента СУБД, ответственного за управление транзакциями. Система, в которой поддерживается сериализация транзакций, обеспечивает реальную изолированность пользователей.
-
-Основная реализационная проблема состоит в выборе метода сериализации набора транзакций, который не слишком ограничивал бы их параллельность. Приходящим на ум тривиальным решением является действительно последовательное выполнение транзакций. Но существуют ситуации, в которых можно выполнять операторы разных транзакций в любом порядке с сохранением сериальности. Примерами могут служить только читающие транзакции, а также транзакции, не конфликтующие по доступу к объектам базы данных.
-
-Между транзакциями могут существовать следующие виды конфликтов:
+Основываясь на политиках разрешения перечисленных конфликтов, стандарт SQL определяет четыре уровня изоляции:
 \begin{itemize}
-\item W-W - транзакция 2 пытается изменять объект, измененный не закончившейся транзакцией 1;
-\item R-W - транзакция 2 пытается изменять объект, прочитанный не закончившейся транзакцией 1;
-\item W-R - транзакция 2 пытается читать объект, измененный не закончившейся транзакцией 1.
+\item \textbf{Read Uncommitted} — это самый низкий уровень изоляции. На этом уровне одна транзакция может считывать еще не зафиксированные изменения, сделанные другими транзакциями, тем самым допуская грязное чтение. На этом уровне транзакции не изолированы друг от друга.
+\item \textbf{Read Committed} — уровень изоляции гарантирует, что любые считанные данные фиксируются в момент их чтения. Таким образом, он не допускает грязного чтения. Транзакция удерживает блокировку чтения или записи для текущей строки и, таким образом, предотвращает ее чтение, обновление или удаление другими транзакциями.
+\item \textbf{Repeatable Read} — транзакция удерживает блокировки чтения для всех строк, на которые она ссылается, и записывает блокировки для указанных строк для действий обновления и удаления. Поскольку другие транзакции не могут читать, обновлять или удалять эти строки, следовательно, это позволяет избежать неповторяющегося чтения.
+\item \textbf{Serializable} — самый высокий уровень изоляции. Выполнение определяется как выполнение операций, в которых одновременно выполняемые транзакции кажутся последовательно выполняемыми\autocite{BeginningSQL}.
 \end{itemize}
-Практические методы сериализации транзакций основываются на учете этих конфликтов \autocite{Serial}.
+
+\begin{table}
+\begin{tabular}{l|l|l|l|l}
+                 & Фантомное чтение         & Неповторяющееся чтение   & Грязное чтение           & Потерянное обновление    \\ \hline
+Serializable     & \cellcolor[HTML]{32CB00} & \cellcolor[HTML]{32CB00} & \cellcolor[HTML]{32CB00} & \cellcolor[HTML]{32CB00} \\ \hline
+Repeatable Read  & \cellcolor[HTML]{FE0000} & \cellcolor[HTML]{32CB00} & \cellcolor[HTML]{32CB00} & \cellcolor[HTML]{32CB00} \\ \hline
+Read Committed   & \cellcolor[HTML]{FE0000} & \cellcolor[HTML]{FE0000} & \cellcolor[HTML]{32CB00} & \cellcolor[HTML]{32CB00} \\ \hline
+Read Uncommitted & \cellcolor[HTML]{FE0000} & \cellcolor[HTML]{FE0000} & \cellcolor[HTML]{FE0000} & \cellcolor[HTML]{32CB00} \\ \hline
+\end{tabular}
+\end{table}
+
+
 \paragraph{Методы сериализации транзакций} ~\\
 
-Существуют два базовых подхода к сериализации транзакций -- основанный на синхронизационных захватах объектов базы данных и на использовании временных меток. Суть обоих подходов состоит в обнаружении конфликтов транзакций и их устранении.
-Предварительно заметим, что для каждого из подходов имеются две разновидности -- пессимистическая и оптимистическая. При применении пессимистических методов, ориентированных на ситуации, когда конфликты возникают часто, конфликты распознаются и разрешаются немедленно при их возникновении. Оптимистические методы основываются на том, что результаты всех операций модификации базы данных сохраняются в рабочей памяти транзакций. Реальная модификация базы данных производится только на стадии фиксации транзакции. Тогда же проверяется, не возникают ли конфликты с другими транзакциями.
+Делятся на три типа:
+\begin{itemize}
+\item \textbf{С блокирующим планировщиком (blocking sheduller)} — для каждого запроса планировщик запрашивает блокировку. Каждая блокировка запрашивается в определенном режиме (чтение или запись). Если запрашиваемый элемент данных еще не заблокирован в несовместимом режиме, блокировка предоставляется; в противном случае возникает конфликт блокировок и транзакция блокируется, пока текущий владелец блокировки не освободит блокировку. Например: двухфазные AL (Altruistic Locking), O2PL (Ordered Sharing of Locks), 2PL (Two-Phase Locking), C2PL (Conservative Two-Phase Locking), S2PL (Strict Two-Phase Locking), SS2PL (Strong Strict Two-Phase Locking), не двухфазные WTL (Write-only Tree Locking), RWTL (Read-Write Tree Locking).
 
-Пессимистические методы сравнительно просто трансформируются в свои оптимистические варианты \autocite{Serial}.
+\item \textbf{С неблокирующим планировщиком (non-blocking sheduller)} — запрос отрабатывает, не имея возможности заблокировать другой запрос, конфликты разрешаются постфактум. Например: TO (Timestamp Ordering), SGT (Serialization Graph Testing).
+
+\item \textbf{Смешанный} — использует разные типы для разных видов конфликтов (rw/wr, ww).\autocite{TransactionalInformationSystems}
+\end{itemize}
 
 \subsection{Блокировки} ~\\
 
@@ -361,7 +365,7 @@
 
 \paragraph{Двухфазный протокол синхронизационных блокировок}~\\
 
-В базах данных и обработке транзакций двухфазная блокировка (2PL) — это метод управления параллелизмом, который гарантирует сериализуемость. Это также имя результирующего набора графиков транзакций базы данных (истории). Протокол использует блокировки, применяемые транзакцией к данным, которые могут блокировать (интерпретировать как сигналы для остановки) другие транзакции от доступа к тем же данным в течение жизни транзакции.
+В базах данных и обработке транзакций двухфазная блокировка (2PL) — это метод управления параллелизмом, который гарантирует сериализуемость. Так же называют результирующий набор графиков транзакций базы данных (истории). Протокол использует блокировки, применяемые транзакцией к данным, которые могут блокировать (интерпретировать как сигналы для остановки) другие транзакции от доступа к тем же данным в течение жизни транзакции.
 
 По протоколу 2PL блокировки (locks) применяются и удаляются в два этапа:
 \begin{enumerate}
@@ -402,7 +406,7 @@
 Заметим, что в централизованных системах стоимость построения графа ожидания сравнительно невелика, но она становится слишком большой в по-настоящему распределенных СУБД, в которых транзакции могут выполняться в разных узлах сети. Поэтому в таких системах обычно используются другие методы сериализации транзакций.
 
 Еще одно замечание. Чтобы минимизировать число конфликтов между транзакциями, в некоторых СУБД (например, в Oracle) используется следующее развитие подхода. Монопольный захват объекта блокирует только изменяющие транзакции. После выполнении операции модификации предыдущая версия объекта остается доступной для чтения в других транзакциях. Кратковременная блокировка чтения требуется только на период фиксации изменяющей транзакции, когда обновленные объекты становятся текущими \autocite{Serial}
-\subsection{Ссылочная целостность} 
+\subsection{Ссылочная целостность}
 Ссылочная целостность. Ссылочная целостность относится непосредственно к связям между таблицами. Если кратко, то ссылочная целостность
 должна отвечать на вопрос: что будет со строками одной таблицы, если в
 связанной таблице выполняется какая-либо операция модификации? Для
@@ -513,7 +517,7 @@ CREATE TABLE PERSON
 родительской таблице есть запись с таким же значением первичного
 ключа;
     \item при удалении записи из родительской таблицы СУБД проверяет, что в
-подчинённой таблице нет записей с таким же значением внешнего ключа. 
+подчинённой таблице нет записей с таким же значением внешнего ключа.
 \end{itemize}
 
 \paragraph{Способы поддержания ссылочной целостности} ~\\
@@ -533,7 +537,7 @@ CREATE TABLE PERSON
     \end{itemize}
 \end{itemize}
 
-\subsection{Правила(триггеры)}
+\subsection{Правила (триггеры)}
 Триггеры являются одной из разновидностей хранимых процедур. Их исполнение происходит при выполнении для таблицы какого-либо оператора языка манипулирования данными (DML). Триггеры используются для проверки целостности данных, а также для отката транзакций.
 
 Триггер представляет собой специальный тип хранимых процедур, запускаемых сервером автоматически при попытке изменения данных в таблицах, с которыми триггеры связаны. Каждый триггер привязывается к конкретной таблице. Все производимые им модификации данных рассматриваются как одна транзакция. В случае обнаружения ошибки или нарушения целостности данных происходит откат этой транзакции. Тем самым внесение изменений запрещается. Отменяются также все изменения, уже сделанные триггером.
@@ -560,7 +564,7 @@ CREATE TABLE PERSON
   CREATE TRIGGER имя_триггера
   BEFORE | AFTER <триггерное_событие>
   ON <имя_таблицы>
-  [REFERENCING 
+  [REFERENCING
     <список_старых_или_новых_псевдонимов>]
   [FOR EACH { ROW | STATEMENT}]
   [WHEN(условие_триггера)]
