seaView chapter refactored (#11)
seaView chapter refactored

--- a/part/basis/models.tex
+++ b/part/basis/models.tex
@@ -458,40 +458,34 @@ $MIL(o) \leqslant AIL(o) \leq CIL(o)$
 
 \paragraph{SeaView}
 
-Модель SeaView (secure data view) была предложена Дороти Деннингом в 1987 г. Она состоит из мандатной, дискреционной моделей, а также вспомогательной для добавления и классификации новой информации поступающей в базу данных. SeaView состоит из двух слоев:
+Модель SeaView (Secure Data View) \autocite{SeaView} была предложена Дороти Деннинг в 1987 г. Она состоит из мандатной, дискреционной моделей, а также вспомогательной для добавления и классификации новой информации поступающей в базу данных. SeaView состоит из двух слоев:
 
 \begin{itemize}
     \item \textbf{MAC}
     обязательный контроль доступа. Этот уровень соответствует обязательной политике безопасности моделей Bell-LaPadula и Biba.
     \item \textbf{Trusted Computing Base (TCB)}
-    определяет концепцию многоуровневых отношений, поддерживает дискреционные средства управления для многоуровневых отношений и представлений, а также формализует поддерживающие политики. TCB построен поверх MAC.
+    определяет концепцию многоуровневых отношений, поддерживает дискреционные средства управления для многоуровневых отношений и представлений, а также формализует поддерживающие политики.
 \end{itemize}
 
-Модель SeaView использует субъекты, объекты и классы доступа. Класс доступа состоит из:
+Класс доступа в модели SeaView состоит из:
 
 \begin{itemize}
-    \item \textbf{Класс секретности}
-    Класс секретности соответствует уровню безопасности модели Bell-LaПадулы
-    \item \textbf{Класс целостности}
-    Класс целостности соответствует уровню целостности модели Биба
+    \item \textbf{Уровень секретности} -- иерархический уровень секретности.
+    \item \textbf{Классы целостности} -- набор неирархических классов,между которыми определены отношения вложенности.
 \end{itemize}
 
-Объекты MAC - это файлы, к которым должен быть предоставлен доступ. Субъекты MAC - это процессы, действующие от имени пользователей, и им назначается классификация этого пользователя. Каждому пользователю назначаются:
+В рамках модели MAC каждому субъекту и объекту назначаются классы:
 
 \begin{itemize}
-    \item Класс минимальной секретности (minsecrecy)
-    \item Класс минимальной целостности (minintegrity)
-    \item Классы секретности и целостности, первоначально назначенные пользователю, обозначаются maxsecrecy и maxintegrity
+    \item Класс для записи
+    \item Класс для чтения
 \end{itemize}
 
-Каждому объекту назначаются классы:
+Причем для каждого объекта класс чтения должен быть выше класса записи. Субъект считается доверенным, если его класс чтения строго больше класса записи. Для недоверенных субъектов классы чтения и записи равны.
 
-\begin{itemize}
-    \item Класс для записи (minsecrecy, maxintegrity)
-    \item Класс для чтения (maxsecrecy, minintegrity)
-\end{itemize}
+В рамках модели TCB реализуется многоуровневость.  Модель TCB определяет политику дискреционного управления доступом и поддерживающие политики. Она определяет компоненты многоуровневой защищенной системы реляционной базы данных, включая многоуровневые отношения, представления, ограничения целостности и дискреционные полномочия. Информация в модели TCB секретна и должна храниться в объектах, доступ к которым огранчен. 
 
-Причем для каждого объекта класс чтения должен быть выше класса записи. Субъект считается доверенным, если класс чтения строго больше класса записи.
+SeaView представляет собой набор одноуровневых БД.  Одноуровневые БД связанны с конкретным классом доступа. Таким образом, для реализации модели SeaView могут использоваться обыкновенные реляционные базы данных. А доступ к ним осуществляет отдельное ПО~--- монитор безопасности.  Он при попытке доступа субъекта к объекту сранивает классы доступа и принимает решение~--- разрешить действие или нет. Оригинальная статья формулирует следующее требование к монитору безопасности~--- он должен быть легковесным и легкопроверяемым на уязвимости. Требование подкрепляется ссылкой на Оранжевую книгу и объясняется тем, что монитор безопасности ключевой элемент, отвечающий за безопасность данных в модели SeaView.
 
 \paragraph{Jajodia\&Sandhu}
 
