Источники в статистических БД (#10)
На уд 3 потянет

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -129,6 +129,23 @@
 	publisher = {Уфимский Государственный Авиационный Технический Университет},
 	year      = 2014,
 	}
+	
+@article{SDB1999,
+	author = {KRISHNAMURTY MURALIDHAR, RATHINDRA SARATHY}, 
+	journal = {ACM Transactions on Database Systems, Vol. 24},
+	number = {4},
+	year = {1999},
+	title = {Security of Random Data Perturbation Methods},
+	url = {https://www.researchgate.net/publication/220225494_Security_of_Random_Data_Perturbation_Methods}
+	}
+	
+@article{LatticeModel,
+	author = {Gultekin Ozsoyoglu, JiYong Chung},
+	journal = {1986 IEEE Second International Conference on Data Engineering},
+	year = {1986},
+	title = {Information loss in the lattice model of summary tables due to cell suppression},
+	url = {https://ieeexplore.ieee.org/document/7266208}
+	}
 
 @article{Utebov2008,
 	author = {Утебов Д. Р., Белов С. В.},
