--- a/part/statistical.tex
+++ b/part/statistical.tex
@@ -1,6 +1,6 @@
 \section{Безопасность в статистических БД}
 
-Инфы про статистические базы данных на русском языке мало и большая часть бредовая. Гуглите statistical database. Все источники будут на английском, переведено специально для вас. Источников несколько \cite{ComputerSecurity2008} \cite{IntroBD2014}, под конец была найдена статья, \cite{SDB1989} в которой есть вся собранная инфа.
+Инфы про статистические базы данных на русском языке мало и большая часть бредовая. Гуглите statistical database. Все источники будут на английском, переведено специально для вас. Источников несколько \cite{ComputerSecurity2008} \cite{IntroBD2014}, под конец была найдена статья, \cite{SDB1989} в которой есть вся собранная инфа, еще есть более свежий источник \citep{SDB1999}.
 
 \subsection{Общие сведения}
 Определение статистической БД. Классификация статистических БД. Характеристики статистических БД.
@@ -75,7 +75,7 @@
 \end{figure}
 \paragraph{Концептуальный}
 
-Основная проблема защиты статистических БД в том, что вся реляционная алгебра, которую различным образом реализуют языки манипуляции данными, позволяет выводить индивидуальные данные. Концептуальный подход предлагает заменить классическую схему взаимодействия с данными реляционной БД. Для этого были описаны качественные требования к фреймворку, реализующему новую логику взаимодействия:
+Основная проблема защиты статистических БД в том, что вся реляционная алгебра, которую различным образом реализуют языки манипуляции данными, позволяет выводить индивидуальные данные. Концептуальный подход предлагает заменить классическую схему взаимодействия с данными реляционной БД. Для этого были описаны качественные требования к фреймворку (формальное доказательство требований имеется в статье \cite{LatticeModel}), реализующему новую логику взаимодействия:
 \begin{enumerate}
   \item Необходимо учитывать категории данных в таблицах (например, категоризация людей по профессии)
   \item Необходимо принимать во внимание динамически изменяемые данные и угрозы, связанные с этим
@@ -88,6 +88,8 @@
 Еще один способ концептуального подхода -- использование решетчетой модели, который заключается в агрегации данных по разным признакам на разном уровне детализации (то есть выделение отдельных таблиц с меньшим количеством атрибутов и с одним или более одинаковыми признаками (берем общее поле, например пол, и все записи одникового пола переносим в отдельные таблицы)).
 
 Классический способ (не защищающий от вывода данных) -- для пользователей с доступом к персональным данным доступны все запросы. А исследователям статистики и прочим пользователям без доступа к персональным данным выдается доступ только к некоторым записям или готовым статистическим результатам (агрегация).
+
+Сама конциептуальная модель описана только в более старой статье \cite{SDB1989}, в новых статьях \cite{SDB1999}, \cite{ComputerSecurity2008} она уже не упоминается.
 
 \paragraph{Ограничение запросов}
 
