Docker, k8s + build fix (#22)
* Add some info about Docker certs + Docker vs K8s diff

* fix build those retards broke

--- a/part/statistical.tex
+++ b/part/statistical.tex
@@ -1,6 +1,6 @@
 \section{Безопасность в статистических БД}
 
-Инфы про статистические базы данных на русском языке мало и большая часть бредовая. Гуглите statistical database. Все источники будут на английском, переведено специально для вас. Источников несколько \cite{ComputerSecurity2008} \cite{IntroBD2014}, под конец была найдена статья, \cite{SDB1989} в которой есть вся собранная инфа, еще есть более свежий источник \citep{SDB1999}.
+Инфы про статистические базы данных на русском языке мало и большая часть бредовая. Гуглите statistical database. Все источники будут на английском, переведено специально для вас. Источников несколько \cite{ComputerSecurity2008} \cite{IntroBD2014}, под конец была найдена статья, \cite{SDB1989} в которой есть вся собранная инфа, еще есть более свежий источник \cite{SDB1999}.
 
 \subsection{Общие сведения}
 Определение статистической БД. Классификация статистических БД. Характеристики статистических БД.
