Add more about Intrusion detection (#23)
* add info about misuse detection

* add about analysis systems

* add intrusion detection bibliography

* Apply suggestions from code review

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -108,6 +108,16 @@
 	journal = {Technical Report 99–15},
 	publisher = {Chalmers Univ.},
 }
+
+@article{IDSBranitsky,
+	author = {А.А. Браницкий, И.В. Котенко},
+	journal = {Труды СПИИРАН, выпуск 45},
+	year = {2016},
+	title = {Анализ и классификация методов обнаружения сетевых атак},
+	pages = {207--244},
+	url = {http://www.mathnet.ru/links/348a035b6c0c5f4351d9a14db6e991fe/trspy873.pdf}
+}
+
 @techreport{IDSFSTEK,
   title       = {ИНФОРМАЦИОННОЕ ПИСЬМО ОБ УТВЕРЖДЕНИИ ТРЕБОВАНИЙ К СИСТЕМАМ ОБНАРУЖЕНИЯ ВТОРЖЕНИЙ},
   institution = {ФЕДЕРАЛЬНАЯ СЛУЖБА ПО ТЕХНИЧЕСКОМУ И ЭКСПОРТНОМУ КОНТРОЛЮ (ФСТЭК РОССИИ)},
@@ -600,4 +610,10 @@
     title = {Verify repository client with certificates},
     url = {https://docs.docker.com/engine/security/certificates/},
     urldate = {2022-04-20}
+}
+
+@online{IntrusionDetectionSystemsMsu,
+    title = {Лекции по системному администрированию МГУ им. Ломоносова, Лекция 4 Intrusion Detection Systems},
+    url = {https://intuit.ru/studies/professional_retraining/943/courses/20/lecture/631},
+    urldate = {2022-06-19}
 }
