--- a/bibliography.bib
+++ b/bibliography.bib
@@ -63,12 +63,29 @@
 	year = {2014}
 }
 
-@online{dce,
-	author = {{Бомонка}},
-	title = {{Распределенная обработка данных}},
-	url = {https://ru.bmstu.wiki/%D0%A0%D0%B0%D1%81%D0%BF%D1%80%D0%B5%D0%B4%D0%B5%D0%BB%D0%B5%D0%BD%D0%BD%D0%B0%D1%8F_%D0%BE%D0%B1%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B0_%D0%B4%D0%B0%D0%BD%D0%BD%D1%8B%D1%85},
+@online{DDBMSIndusEdition,
+    url     = {https://www.tutorialspoint.com/distributed_dbms/distributed_dbms_databases.htm},
+    urldate = {2022-06-13}
+}
+
+@online{bmstu,
+	author  = {{Бомонка}},
+	title   = {{Распределенная обработка данных}},
+	url     = {https://ru.bmstu.wiki/%D0%A0%D0%B0%D1%81%D0%BF%D1%80%D0%B5%D0%B4%D0%B5%D0%BB%D0%B5%D0%BD%D0%BD%D0%B0%D1%8F_%D0%BE%D0%B1%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%BA%D0%B0_%D0%B4%D0%B0%D0%BD%D0%BD%D1%8B%D1%85},
 	urldate = {2020-04-20},
-	year = {2019}
+	year    = {2019}
+}
+
+@online{dce,
+    url     = {https://www.ibm.com/docs/en/cics-ts/5.3?topic=SSGMCP_5.3.0/com.ibm.cics.ts.doc/dfhtm/topics/dfhtm0a.html},
+	urldate = {2022-06-14}
+}
+
+@book{WebServices,
+    author  = {/G. Alonso, F. Casati, H. Kuno, V. Machiraju},
+    title   = {Web Services. Concepts, Architectures and Applications},
+    year    = {2004},
+    isbn    = {978-3-662-10876-5}
 }
 
 @online{infosec,
